fix 'display:flex' bug on safari

--- a/website/sass/index.scss
+++ b/website/sass/index.scss
@@ -236,8 +236,6 @@ border: 1px solid black;
 .nav-container {
   position: fixed;
   width: 240px;
-  display: flex;
-  justify-content: center;
   top: 0;
   bottom: 0;
   z-index: 4;
